[package]
name = "hyogen-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.1"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }